# App-Test-Case-Feature-Repository

./: .env.example  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
backend/: .env  .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  context.py  logging.py  security.py
backend/app/db/: prisma.py
backend/app/graphql/: __init__.py  schema.py
backend/app/graphql/directives/: __init__.py  auth.py
backend/app/graphql/types/: __init__.py  ai_provider.py  audit.py  auth.py  common.py  enums.py  feature.py  node.py  permission.py  role.py  user.py
backend/app/middleware/: ip_whitelist.py  request_logging.py
backend/app/models/: __init__.py
backend/app/modules/ai/: encryption.py  prompt_builder.py  provider_client.py  service.py
backend/app/modules/audit/: __init__.py  service.py
backend/app/modules/auth/: dependencies.py  service.py
backend/app/modules/feature_library/: __init__.py  feature_service.py  node_service.py
backend/app/modules/rbac/: __init__.py  service.py
backend/app/modules/user/: __init__.py  service.py
backend/app/utils/: __init__.py  exceptions.py  pagination.py  tree.py
backend/prisma/: schema.prisma  seed.py
backend/scripts/: init-db.bat  init-db.sh
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: api-graphql.md  architecture.md  database-design.md  database-initialization.md  deployment.md  frontend-pages.md  init-tables.sql  logging-audit.md  rbac-design.md
frontend/: .env.example  (+9 more)
(+48 files in other folders)
