[project]
name = "app-feature-repository-backend"
version = "0.1.0"
description = "APP Feature Repository Backend Framework"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "strawberry-graphql[fastapi]==0.275.5",
    "prisma==0.15.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]==3.4.0",
    "python-dotenv==1.1.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
